@@ -467,9 +467,9 @@ static int fixup_redir(request_rec *r)
 
 static void register_hooks(apr_pool_t *p)
 {
-    static const char * const aszPre[]={ "mod_userdir.c",NULL };
+    static const char * const aszSucc[]={ "mod_userdir.c",NULL };
 
-    ap_hook_translate_name(translate_alias_redir,aszPre,NULL,APR_HOOK_MIDDLE);
+    ap_hook_translate_name(translate_alias_redir,NULL,aszSucc,APR_HOOK_MIDDLE);
     ap_hook_fixups(fixup_redir,NULL,NULL,APR_HOOK_MIDDLE);
 }
 
